* NEWS: mention budget time.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1576 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -75,6 +75,11 @@
    'system.file("bin/irace.bat", package="irace")'
    (thanks to Anthony Antoun)                                        
 
+ * Budget can be specified as maximum time (maxTime, --max-time) consumed by
+   the target algorithm. See the documentation for the details about how this
+   is handled.
+   (Leslie Perez, Manuel López-Ibáñez)
+
 
 1.07
 
