* vignettes/irace-package.Rnw: Document bug in R 3.2.0.
git-svn-id: file:///home/manu/work/irace/svn/trunk@1586 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -2517,6 +2517,11 @@ Optional data passed to \parameter{targetRunner}. This is ignored by the default
      \end{enumerate}
      
      Please contact us on the \irace google group if you have further problems.
+
+\subsection[Error: 4 arguments passed to {.Internal(nchar)} which requires 3]{Error: 4 arguments passed to \code{.Internal(nchar)} which requires 3}
+
+This is a bug in \aR 3.2.0 on Windows. The solution is to update your version of
+\aR.
      
 %FIXME: complete this section
 %\section{Known problems}
